--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ChannelControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ChannelControl.xaml
@@ -78,17 +78,12 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <ProgressBar 
-                    Grid.Row="0"
-                    Grid.Column="0"
-                    Grid.ColumnSpan="2"
-                    Margin="-4,0,0,0"
-                    Progress="{Binding Status.CurrentProgressRatio}"
-                    ProgressColor="{Binding ChannelColor, Converter={StaticResource StringToColorConverter}}"
-                    BackgroundColor="{Binding ChannelColor, Converter={StaticResource StringToHalfTransparentColorConverter}}"
-                    HeightRequest="1"
-                    MinimumHeightRequest="1"
-                    />
+        <views:ChannelProgressBar 
+            Grid.Row="0"
+            Grid.Column="0"
+            Grid.ColumnSpan="2"
+            Margin="-2,0,2,0"
+            />
 
         <!-- Style="{StaticResource ListNormalTextStyle}" -->
         <Label Grid.Row="1"
