--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ChannelDetailsPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ChannelDetailsPage.xaml
@@ -104,13 +104,10 @@
                                 >
                         </Button>
 
-                        <ProgressBar Margin="-4,0,0,0"
-                                     Progress="{Binding ChannelData.Status.CurrentProgressRatio}"
-                                     ProgressColor="{Binding ChannelData.ChannelColor, Converter={StaticResource StringToColorConverter}}"
-                                     BackgroundColor="{Binding ChannelData.ChannelColor, Converter={StaticResource StringToHalfTransparentColorConverter}}"
-                                     HeightRequest="1"
-                                     MinimumHeightRequest="1"
-                                      />
+                        <views:ChannelProgressBar 
+                            Margin="-2,0,2,0"
+                            BindingContext="{Binding ChannelData}"
+                            />
 
                         <Label FontAttributes="Bold"
                                TextColor="{StaticResource InactiveProgramColor}">
