--- a/Source/Pekspro.RadioStorm.MAUI/App.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/App.xaml
@@ -22,6 +22,7 @@
             <Color x:Key="DebugColor">#bbbbbb</Color>
             <Color x:Key="HyperlinkColor">#0063B1</Color>
             <Color x:Key="PanelBackground">#1E1E1E</Color>
+            <x:Double x:Key="FontSizeHeader">20</x:Double>
             <x:Double x:Key="FontSizeNormal">14</x:Double>
             <x:Double x:Key="FontSizeDetails">12</x:Double>
             <x:Double x:Key="HeaderFavoriteStarSize">16</x:Double>
@@ -102,7 +103,7 @@
             <Style x:Key="ListHeaderTextStyle" TargetType="Label">
                 <Setter Property="TextColor" Value="{DynamicResource PrimaryColor}" />
                 <Setter Property="FontFamily" Value="OpenSansRegular" />
-                <Setter Property="FontSize" Value="20" />
+                <Setter Property="FontSize" Value="{StaticResource FontSizeHeader}" />
                 <Setter Property="FontAttributes" Value="Bold" />
                 <Setter Property="MaxLines" Value="1" />
             </Style>
