--- a/Source/Pekspro.RadioStorm.MAUI/App.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/App.xaml
@@ -93,10 +93,9 @@
             </Style>
 
             <Style x:Key="ListGroupTextStyle" TargetType="Label">
-                <Setter Property="TextColor" Value="{DynamicResource PrimaryColor}" />
+                <Setter Property="TextColor" Value="{DynamicResource HyperlinkColor}" />
                 <Setter Property="FontFamily" Value="OpenSansRegular" />
-                <Setter Property="FontSize" Value="20" />
-                <Setter Property="FontAttributes" Value="Bold" />
+                <Setter Property="FontSize" Value="{StaticResource FontSizeDetails}" />
                 <Setter Property="MaxLines" Value="1" />
             </Style>
 
