--- a/Source/Pekspro.RadioStorm.MAUI/Views/GroupHeaderControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Views/GroupHeaderControl.xaml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Pekspro.RadioStorm.MAUI.Views.GroupHeaderControl">
-    <Label Text="{Binding Header}" Style="{StaticResource ListGroupTextStyle}" />
+             x:Class="Pekspro.RadioStorm.MAUI.Views.GroupHeaderControl"
+             >
+    <Grid RowDefinitions="Auto, Auto" RowSpacing="4">
+        <Label Grid.Row="0" Text="{Binding Header}" Style="{StaticResource ListGroupTextStyle}" />
+        <Rectangle Grid.Row="1" Style="{StaticResource Separator}" />
+    </Grid>
 </ContentView>
